--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "@capacitor/android": "^7.4.3",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
-    "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "dotenv": "^17.2.2",
+    "flowbite": "^3.1.2",
+    "flowbite-vue": "^0.2.1",
     "joi": "^18.0.1",
-    "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue3-hot-toast": "^0.0.5"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.13",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vue-tsc": "^3.0.5"
