--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "flowbite-vue": "^0.2.1",
     "joi": "^18.0.1",
     "primeicons": "^7.0.0",
+    "primevue": "^4.3.9",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
