--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flowbite": "^3.1.2",
     "flowbite-vue": "^0.2.1",
     "joi": "^18.0.1",
+    "leaflet": "^1.9.4",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "vee-validate": "^4.15.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@types/leaflet": "^1.9.20",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "tailwindcss": "^4.1.13",
