--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@types/leaflet": "^1.9.20",
+    "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "tailwindcss": "^4.1.13",
