Feat: List Quizzes

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,7 @@
     "paths": {
       "@layouts/*": ["src/layouts/*"],
       "@core/*": ["src/Core/*"],
+      "@components/*": ["src/components/*"],
 
     },
     "types": ["vite/client"]
