feat: User Update

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,7 @@
       "@layouts/*": ["src/layouts/*"],
       "@core/*": ["src/Core/*"],
       "@components/*": ["src/components/*"],
+      "@UserStore": ["src/Stores/user.ts"],
 
     },
     "types": ["vite/client"]
