--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "capbuild":"npx cap copy android && npx cap sync android && npx cap open android"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
@@ -33,7 +34,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@types/leaflet": "^1.9.20",
-    "@types/node": "^24.6.0",
+    "@types/node": "^24.7.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "tailwindcss": "^4.1.13",
