--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "capbuild":"npx cap copy android && npx cap sync android && npx cap open android"
+    "capbuild": "npm run build && cap copy android && npx cap sync android && npx cap open android"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
@@ -24,6 +24,7 @@
     "flowbite-vue": "^0.2.1",
     "joi": "^18.0.1",
     "leaflet": "^1.9.4",
+    "lodash.throttle": "^4.1.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.0",
     "vee-validate": "^4.15.1",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@types/leaflet": "^1.9.20",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^24.7.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
