--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue3-hot-toast": "^0.0.5"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@tailwindcss/vite": "^4.1.13",
     "@types/leaflet": "^1.9.20",
     "@types/lodash.throttle": "^4.1.9",
