--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
+    "@capacitor/app": "^7.1.0",
     "@capacitor/browser": "^7.0.2",
     "@capacitor/cli": "^7.4.3",
-    "@capacitor/core": "^7.4.3",
     "@capacitor/push-notifications": "^7.0.3",
     "@capacitor/status-bar": "^7.0.3",
     "@tanstack/vue-query": "^5.87.1",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
+    "@capacitor/core": "^7.4.3",
     "@tailwindcss/vite": "^4.1.13",
     "@types/leaflet": "^1.9.20",
     "@types/lodash.throttle": "^4.1.9",
